# Project-Euler

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
cmake/: CompilerWarnings.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake
include/eul/: conversion.hpp  fold.hpp  is_palindrome.hpp  is_prime.hpp  k_combinations.hpp  numbers_properties.hpp  types_utility.hpp  unique_products.hpp
src/: CMakeLists.txt  P1.cpp  P10.cpp  P11.cpp  P12.cpp  P2.cpp  P3.cpp  P4.cpp  P5.cpp  P6.cpp  P7.cpp  P8.cpp  P9.cpp  P_1.cpp
